apps/workloads/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
  namespace: headlamp
  annotations:
    nginx.ingress.kubernetes.io/app-root: /headlamp/
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.pkya.xyz
    http:
      paths:
      - path: /headlamp
        pathType: Prefix
        backend:
          service:
            name: headlamp
            port:
              number: 80
